--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
+    "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
     "semantic-ui-css": "2.2.12",
